# BCOMPILER

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/BCOMP/: .gitignore  CMakeLists.txt  Makefile.atelierb  Makefile.bcompiler  bcomp.cpp  c_api.cpp  c_api.h  c_auto_test.cpp  c_auto_test.h  c_b0type.cpp  c_b0type.h  c_base.cpp  c_base.h  c_betree.cpp  c_betree.h  c_binexp.cpp  c_blist.cpp  c_blist.h  c_bltin.cpp  c_bltin.h  c_bmana.cpp  c_bmana.h  c_bound.cpp  c_bound.h  c_cata.cpp  c_cata.h  c_chain.cpp  c_chain.h  c_chain2.cpp  c_chain2.h  c_char.cpp  c_char.h  c_cleanup.cpp  c_cleanup.h  c_clntyp.cpp  c_clone.cpp  c_cmptyp.cpp  c_commen.cpp  c_commen.h  c_defini.cpp  (+224 more)
src/BCOMP/po/: CMakeLists.txt  bcomp.pot  fr.po
src/BCOMP_HELPER/: BCOMPLoader.cpp  BCOMPLoader.h  CMakeLists.txt  MessageHandler.cpp  MessageHandler.h  NodeVisitor.cpp  NodeVisitor.h
src/BXML/: .gitignore  CMakeLists.txt  XmlStreamWriter.cpp  XmlStreamWriter.h  XmlWriter.cpp  XmlWriter.h  bxml-1.0.xsd  bxml.cpp  bxml.xsd  bxml_api.cpp  bxml_api.h  version.h.in
src/BXML/doc/: BXML-Format Description.docx
src/BXML/etools/: bxmlcomponent.etool  bxmlproject.etool  openbxml.etool
src/RESOURCES/: .gitignore  CMakeLists.txt  Makefile.atelierb  Makefile.bcompiler  p_api.cpp  p_api.h  p_comm.cpp  p_comm.h  p_file.cpp  p_file.h  p_head.h  p_item.cpp  p_item.h  p_line.cpp  p_line.h  p_mana.cpp  p_mana.h  p_mark.cpp  p_mark.h  p_port.h  p_resour.cpp  p_resour.h  p_string.cpp  p_string.h  p_synt.cpp  p_synt.h  p_tool.cpp  p_tool.h  p_trace.cpp  p_trace.h  version.h.in
src/RESOURCES/TESTS/: load.cpp  load.h  main.cpp
src/STUB_DECOMPILER/: CMakeLists.txt  stub.cpp
